fix pager button alignment
the empty buttons are now missing the anchor tags, fixing this variable

--- a/css/shanti-main.css
+++ b/css/shanti-main.css
@@ -958,6 +958,10 @@ input.pagerer-page{ border-radius:2px; border:none;	font-size:0.88em; padding-to
 .pager .pager-first>a,
 .pager .pager-last>a{ position:relative; top: 0.1rem;}
 .pager .pager-last>a{ margin-right:1rem;}
+
+.pager li.pager-first >.icon{ position:relative; top:-2rem;}
+.pager li.pager-previous >.icon{ position:relative; top:-3rem;}
+.pager li>.icon{ }
 .pager-first .icon,
 .pager-previous .icon,
 .pager-next .icon,
